# buffpeep

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  gl_codegen.sh
data/: container.dds  perlin.dds
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
gl_box/: CMakeLists.txt
gl_box/src/: allocator.h  camera.c  camera.h  gl_debug.c  image.c  image.h  input.c  logging.h  main.c  shader.c  shader.h  types.h
gl_box/src/gl/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  allocator.h  camera.c  camera.h  file.c  file.h  gl_debug.c  gl_debug.h  gl_setup.c  gl_setup.h  image.c  image.h  input.c  input.h  logging.c  logging.h  main.c  shader.c  shader.h  types.h  viewer.c  viewer.h
src/gl/: fragment.glsl  vertex.glsl
src/io/: file.c  file.h  gltf.c  gltf.h  obj.c  obj.h
